Fix png copy bug

--- a/dmu32/dmu32_seds_to_vo.ipynb
+++ b/dmu32/dmu32_seds_to_vo.ipynb
@@ -223,8 +223,8 @@
     "    \n",
     "    #Also try to copy the png\n",
     "    try:\n",
-    "        copyfile(in_sed_name.replace('.fits', '.png'), \n",
-    "                 out_sed_name.replace('.fits', '.png'))\n",
+    "        copyfile(in_sed_name.replace('fits', 'png'), \n",
+    "                 out_sed_name.replace('fits', 'png'))\n",
     "\n",
     "    except FileNotFoundError:\n",
     "        pass\n",
