Ran specz conversion

--- a/dmu23/dmu23_specz_to_vo.ipynb
+++ b/dmu23/dmu23_specz_to_vo.ipynb
@@ -19,9 +19,9 @@
      "output_type": "stream",
      "text": [
       "This notebook was run with herschelhelp_internal version: \n",
-      "017bb1e (Mon Jun 18 14:58:59 2018 +0100) [with local modifications]\n",
+      "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2018-07-20 11:47:47.978551\n"
+      "2018-07-20 12:52:12.810625\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
    },
    "outputs": [],
    "source": [
-    "sep  = Table.read('./dmu23_AKARI-SEP/data/AKARI-SEP-specz-v2.csv')"
+    "sep  = Table.read('./dmu23_AKARI-SEP/data/Akari-SEP-specz-v2.csv')"
    ]
   },
   {
