Wrote SED pngs to VO

--- a/dmu32/dmu32_seds_to_vo.ipynb
+++ b/dmu32/dmu32_seds_to_vo.ipynb
@@ -19,9 +19,9 @@
      "output_type": "stream",
      "text": [
       "This notebook was run with herschelhelp_internal version: \n",
-      "017bb1e (Mon Jun 18 14:58:59 2018 +0100) [with local modifications]\n",
+      "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2018-07-11 18:16:00.119087\n"
+      "2018-07-17 13:19:19.664728\n"
      ]
     }
    ],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -246,61 +246,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dmu_products/dmu28/dmu28_COSMOS/data/zphot/final_results.fits\n",
-      "../dmu28/dmu28_COSMOS/data/zphot/SEDs/fits/\n",
-      "There are 0 SEDs here\n",
-      "dmu_products/dmu28/dmu28_ELAIS-S1/data/zphot/HELP_final_results.fits\n",
-      "../dmu28/dmu28_ELAIS-S1/data/zphot/SEDs/fits/\n",
-      "There are 0 SEDs here\n",
-      "dmu_products/dmu28/dmu28_GAMA-09/data/zphot/HELP_final_results.fits\n",
-      "../dmu28/dmu28_GAMA-09/data/zphot/SEDs/fits/\n",
-      "There are 0 SEDs here\n",
-      "dmu_products/dmu28/dmu28_Lockman-SWIRE/data/zphot/best_extcor/HELP_final_results.fits\n",
-      "../dmu28/dmu28_Lockman-SWIRE/data/zphot/best_extcor/SEDs/fits/\n",
-      "There are 0 SEDs here\n",
-      "dmu_products/dmu28/dmu28_GAMA-12/data/zphot/HELP_final_results.fits\n",
-      "../dmu28/dmu28_GAMA-12/data/zphot/SEDs/fits/\n",
-      "There are 0 SEDs here\n",
       "dmu_products/dmu28/dmu28_GAMA-15/data/zphot/HELP_final_results.fits\n",
       "../dmu28/dmu28_GAMA-15/data/zphot/SEDs/fits/\n",
-      "There are 0 SEDs here\n",
+      "There are 117234 SEDs here\n",
+      "dmu_products/dmu28/dmu28_GAMA-12/data/zphot/HELP_final_results.fits\n",
+      "../dmu28/dmu28_GAMA-12/data/zphot/SEDs/fits/\n",
+      "There are 108139 SEDs here\n",
+      "dmu_products/dmu28/dmu28_COSMOS/data/zphot/final_results.fits\n",
+      "../dmu28/dmu28_COSMOS/data/zphot/SEDs/fits/\n",
+      "There are 15747 SEDs here\n",
       "dmu_products/dmu28/dmu28_SGP/data/zphot/HELP_final_results.fits\n",
       "../dmu28/dmu28_SGP/data/zphot/SEDs/fits/\n",
-      "There are 0 SEDs here\n",
-      "dmu_products/dmu28/dmu28_CDFS-SWIRE/data/zphot/HELP_final_results.fits\n",
-      "../dmu28/dmu28_CDFS-SWIRE/data/zphot/SEDs/fits/\n",
-      "There are 0 SEDs here\n",
+      "There are 352804 SEDs here\n",
+      "dmu_products/dmu28/dmu28_Lockman-SWIRE/data/zphot/best_extcor/HELP_final_results.fits\n",
+      "../dmu28/dmu28_Lockman-SWIRE/data/zphot/best_extcor/SEDs/fits/\n",
+      "There are 46719 SEDs here\n",
       "dmu_products/dmu28/dmu28_ELAIS-N1/data/zphot/HELP_final_results.fits\n",
       "../dmu28/dmu28_ELAIS-N1/data/zphot/SEDs/fits/\n",
-      "There are 21 SEDs here\n",
-      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155700.645p544930.666_best_model.fits\n",
-      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155659.535p544748.704_best_model.fits\n",
-      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155645.430p544835.225_best_model.fits\n",
-      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155659.261p550011.369_best_model.fits\n",
-      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155659.468p545217.840_best_model.fits\n",
-      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155659.062p545715.698_best_model.fits\n",
-      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155659.440p550018.719_best_model.fits\n",
-      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155647.331p550054.897_best_model.fits\n",
-      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155651.625p545843.028_best_model.fits\n",
-      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155643.789p545434.542_best_model.fits\n",
-      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155700.909p550039.328_best_model.fits\n",
-      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155635.416p545104.554_best_model.fits\n",
-      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155645.249p550054.367_best_model.fits\n",
-      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155657.720p545649.854_best_model.fits\n",
-      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155700.744p550117.430_best_model.fits\n",
-      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155647.710p545045.424_best_model.fits\n",
-      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155631.108p545024.379_best_model.fits\n",
-      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155658.920p545332.279_best_model.fits\n",
-      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155644.449p545428.304_best_model.fits\n",
-      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155634.050p545728.087_best_model.fits\n",
-      "/Users/rs548/GitHub/gavo_inputs/bestseds/data/ELAIS-N1/HELP_J155700.730p545700.665_best_model.fits\n"
+      "There are 49986 SEDs here\n",
+      "dmu_products/dmu28/dmu28_GAMA-09/data/zphot/HELP_final_results.fits\n",
+      "../dmu28/dmu28_GAMA-09/data/zphot/SEDs/fits/\n",
+      "There are 130293 SEDs here\n",
+      "dmu_products/dmu28/dmu28_ELAIS-S1/data/zphot/HELP_final_results.fits\n",
+      "../dmu28/dmu28_ELAIS-S1/data/zphot/SEDs/fits/\n",
+      "There are 25393 SEDs here\n",
+      "dmu_products/dmu28/dmu28_CDFS-SWIRE/data/zphot/HELP_final_results.fits\n",
+      "../dmu28/dmu28_CDFS-SWIRE/data/zphot/SEDs/fits/\n",
+      "There are 9308 SEDs here\n"
      ]
     }
    ],
