--- a/dmu22/dmu22_red_source/make_red.ipynb
+++ b/dmu22/dmu22_red_source/make_red.ipynb
@@ -9,19 +9,21 @@
     "![HELP LOGO](https://avatars1.githubusercontent.com/u/7880370?s=100&v=4>)\n",
     "\n",
     "\n",
-    "### The method we used is decsribed in Asboth et al. 2016.\n",
-    "### Our method creates a 6 arcsec 500um map by using bicubic interpolation.\n",
-    "### The D-map is created in the same way as Asboth et al. 2016, and we select all sources with a 3sigma detection in the D-map. We extract the flux density of the sources by using the same method as used for the standart blind cathalogue. \n",
+    "### The method we used is decsribed in Asboth et al. 2016. We recommend the user to read this paper before using the data products.\n",
+    "### Our method creates a 6 arcsec 500um map by using bicubic interpolation. Than a D-map is created with D  = 0.92M500 − 0.392M250, with M500 the 500um map and M250 the 250um map.\n",
+    "### The D-map is created in the same way as Asboth et al. 2016, and we select all sources with a 3sigma detection in the D-map. We extract the flux density of the sources by using the same method as used for the standart blind catalogue. \n",
     "\n",
-    "### The data product vreated is: \"name_field\"_D_MF_cat.fits, and contains all the 3sigma detecion in the D-map, therfore this catalogue is very complete, but also has a very low reliability.\n",
+    "### The data product created is: \"name_field\"_D_MF_cat.fits, and contains all the 3sigma detecion in the D-map, therfore this catalogue is very complete, but also has a very low reliability.\n",
     "\n",
-    "### The RED SPIRE sources are validated with the red_validation.ipynb notebook, which contains cuts to find reliable 500um candidates. "
+    "### The RED SPIRE sources are validated with the 'red_validation.ipynb' notebook, which contains cuts to find reliable 500um riser candidates. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -76,8 +78,8 @@
     }
    ],
    "source": [
-    "for j in range(np.size(all_names)):  \n",
-    "    loc = '../../dmu19/dmu19_HELP-SPIRE-maps/data/'\n",
+    "for j in range(np.size(all_names)):  # loops over the HELP fields\n",
+    "    loc = '../../dmu19/dmu19_HELP-SPIRE-maps/data/' # location of help fields\n",
     "\n",
     "    print(all_names[j]+band[0]+'_v1.0.fits')\n",
     "    name = all_names[j]+band[0]+'_v1.0.fits'\n",
@@ -90,7 +92,9 @@
     "    hdulist500 = fits.open(loc+name)\n",
     "\n",
     "    # https://reproject.readthedocs.io/en/stable/ for info about the reproject function\n",
-    "    # order 1 pics the nearest pixel from the projected header\n",
+    "    # order 0 pics the nearest pixel from the projected header\n",
+    "    # we use the order 0 reproject map to find the masked pixels (NaN's), the order 2 interplolation requiers\n",
+    "    # the NaN's to ber removed. \n",
     "    new_image0, footprint0 = reproject_interp(hdulist500[\"MFILT\"], hdulist250['IMAGE'].header, order = 0) \n",
     "\n",
     "    # NaN pixels in the orignal 500um \n",
@@ -98,10 +102,14 @@
     "    bad = np.isnan(hdulist500[\"MFILT\"].data)\n",
     "    hdulist500[\"MFILT\"].data[bad] = 0 \n",
     "\n",
+    "    # Bicubic interplolation of the 500um map to the 250um map fits header and pixel size\n",
+    "    # Note that Asboth et al. used 500um maps which where made with 6 arcsec resolution, where we use\n",
+    "    # a bicubic interplotations scheme to got from the 500um resolution to 6 arcsec\n",
     "    new_image2, footprint2 = reproject_interp(hdulist500[\"MFILT\"], hdulist250['IMAGE'].header, order = 2) \n",
     "    bad = np.isnan(new_image0)\n",
     "    new_image2[bad] = np.nan\n",
     "\n",
+    "    # uses a matched filter on the 500um and 250um map and calculated D\n",
     "    new_D = fc.do_filtering(hdulist250,hdulist500,new_image2)\n",
     "    \n",
     "    new_image2 -= np.nanmean(new_image2) # make sure the new image is mean substracted\n",
@@ -111,12 +119,12 @@
     "    Dhdu = fits.ImageHDU(header=hdulist250['IMAGE'].header,data=new_D)\n",
     "    Dhdu.writeto('data/'+all_names[j]+'_D_map.fits') \n",
     "    Dhdu = fits.open('data/'+all_names[j]+'_D_map.fits')\n",
-    "\n",
+    "    # select 3 sigma peaks\n",
     "    dmin = 3*np.nanstd(Dhdu[1].data)\n",
     "    dp, rap, decp, xp, yp = fc.find_peak_red(Dhdu,dmin)\n",
     "    \n",
     "\n",
-    "    \n",
+    "    # for the AKARI-NEP a region file has to be used due to the very noisy edges \n",
     "    if all_names[j] == 'AKARI-NEP_SPIRE':\n",
     "        import pyregion\n",
     "        x_all = np.arange(0,np.shape(Dhdu[1].data)[0])\n",
@@ -144,7 +152,7 @@
     "    x_250, y_250 = np.round(w1.wcs_world2pix(rap,  decp, 0)).astype(int)\n",
     "    x_350, y_350 = np.round(w2.wcs_world2pix(rap,  decp, 0)).astype(int)\n",
     "    x_500, y_500 = np.round(w3.wcs_world2pix(rap,  decp, 0)).astype(int)\n",
-    "    \n",
+    "    # pixel flux density at peak location\n",
     "    S250 = hdulist250[\"NEBFILT\"].data[y_250,x_250]\n",
     "    E250 = hdulist250[\"ERROR\"].data[y_250,x_250]\n",
     "    S350 = hdulist350[\"NEBFILT\"].data[y_350,x_350]\n",
@@ -1135,6 +1143,7 @@
     }
    ],
    "source": [
+    "# fids matched filter flux densities on sub-pixel scale\n",
     "for j in range(np.size(all_names)):   \n",
     "    print(loc+all_names[j]+band[0]+'_v1.0.fits')\n",
     "\n",
