Replace vohedamtest URLs to herschel-vos.phys.sussex.ac.uk

--- a/dmu1/dmu1_ml_CDFS-SWIRE/1.2_SERVS.ipynb
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/1.2_SERVS.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "The data is in 'dmu0_DataFusion-Spitzer'\n",
     "\n",
-    "The Spitzer catalogues were produced by the datafusion team are available in the HELP virtual observatory server. They are described there: http://vohedamtest.lam.fr/browse/df_spitzer/q.\n",
+    "The Spitzer catalogues were produced by the datafusion team are available in the HELP virtual observatory server. They are described there: https://herschel-vos.phys.sussex.ac.uk/browse/df_spitzer/q.\n",
     "\n",
     "Lucia told that the magnitudes are aperture corrected.\n",
     "\n",
