--- a/dmu31/dmu31_Examples/dmu31_PyVO_LBGs_in_EN1.ipynb
+++ b/dmu31/dmu31_Examples/dmu31_PyVO_LBGs_in_EN1.ipynb
@@ -133,7 +133,7 @@
    ],
    "source": [
     "#Then we execute the query\n",
-    "service = vo.dal.TAPService(\"http://vohedamtest.lam.fr/__system__/tap/run/tap\")\n",
+    "service = vo.dal.TAPService(\"https://herschel-vos.phys.sussex.ac.uk/__system__/tap/run/tap\")\n",
     "result_set = service.search(base_query + dropout_criteria)\n",
     "reference_set = service.search(base_query + background_criteria)\n",
     "\n",
