--- a/dmu31/dmu31_Examples/dmu31_VO_COSMOS_Cigale_example.ipynb
+++ b/dmu31/dmu31_Examples/dmu31_VO_COSMOS_Cigale_example.ipynb
@@ -76,7 +76,7 @@
     "# Import the module\n",
     "import pyvo as vo\n",
     "# Setting up the service object \n",
-    "service = vo.dal.TAPService(\"http://vohedamtest.lam.fr/__system__/tap/run/tap\")"
+    "service = vo.dal.TAPService(\"https://herschel-vos.phys.sussex.ac.uk/__system__/tap/run/tap\")"
    ]
   },
   {
@@ -90,7 +90,7 @@
     "\n",
     "There are certain input fields and output fields that work specifically with the HELP datasets, which can be found here:\n",
     "\n",
-    "http://vohedamtest.lam.fr/herschelhelp/q/cone/info\n",
+    "https://herschel-vos.phys.sussex.ac.uk/herschelhelp/q/cone/info\n",
     "\n",
     "\n",
     "The query below selects 10 sources from the main HELP catalogue within a defined search radius within the COSMOS field (as defined by the chosen RA and Dec). The result displays their RA, Dec and stellar masses from CIGALE:"
@@ -137,12 +137,12 @@
      "output_type": "stream",
      "text": [
       " - Keys:  dict_keys(['server', 'query', 'src_res', 'src_table', 'QUERY_STATUS', 'citation'])\n",
-      " - Server used to download the data:  http://vohedamtest.lam.fr\n",
+      " - Server used to download the data:  https://herschel-vos.phys.sussex.ac.uk\n",
       " - The query sent - this includes details of all the columns returned, which is particularly useful if * is used instead of specifying columns:  SELECT ra, dec, cigale_mstar FROM herschelhelp.main WHERE herschelhelp.main.field = 'ELAIS-N1' AND herschelhelp.main.cigale_mstar IS NOT NULL LIMIT 1000000\n",
       " - Resource inforation:  Contains traces from resource herschelhelp/q\n",
       " - Information on the source table:  Contains traces from table herschelhelp.main\n",
       " - Did the query work?  OK\n",
-      " - Citation:  http://vohedamtest.lam.fr/tableinfo/herschelhelp.main\n"
+      " - Citation:  https://herschel-vos.phys.sussex.ac.uk/tableinfo/herschelhelp.main\n"
      ]
     }
    ],
