--- a/dmu31/dmu31_Examples/dmu31_pyvo_example.ipynb
+++ b/dmu31/dmu31_Examples/dmu31_pyvo_example.ipynb
@@ -85,7 +85,7 @@
    "source": [
     "You could copy paste the above query into the html query page:\n",
     "\n",
-    "http://vohedamtest.lam.fr/__system__/adql/query/form\n",
+    "https://herschel-vos.phys.sussex.ac.uk/__system__/adql/query/form\n",
     "\n",
     "But here we will execute it using PyVO:"
    ]
@@ -101,7 +101,7 @@
    "outputs": [],
    "source": [
     "#Then we establish the VO connection to our database\n",
-    "service = vo.dal.TAPService(\"http://vohedamtest.lam.fr/__system__/tap/run/tap\")"
+    "service = vo.dal.TAPService(\"https://herschel-vos.phys.sussex.ac.uk/__system__/tap/run/tap\")"
    ]
   },
   {
@@ -476,7 +476,7 @@
     "\n",
     "   \n",
     "        vo_result = vo.tablesearch(\n",
-    "            \"http://vohedamtest.lam.fr/__system__/tap/run/tap\", query).table\n",
+    "            \"https://herschel-vos.phys.sussex.ac.uk/__system__/tap/run/tap\", query).table\n",
     "\n",
     "        moc = MOC()\n",
     "        if len(vo_result):\n",
